# didkitembedded

./: Cargo.toml  Dockerfile  README.md  chiave_str.json  did-example-mine.json  monitor.sh
libs/: didkitlib.rs
src/: 100claim.rs  10claim.rs  20claim.rs  30claim.rs  40claim.rs  50claim.rs  60claim.rs  70claim.rs  80claim.rs  90claim.rs  jwt.rs  main.rs  standard.rs
