[package]
name = "testiamo_sol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.80"
didkit = "0.6.0"
ethereum-types = "0.14.1"
ethers = "2.0.14"
ring = "0.17.8"
serde = "1.0.202"
serde_json = "1.0.117"
ssi = "0.7.0"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.8.0", features = ["v4"] }
web3 = "0.19.0"
anyhow = "1.0.62"

[lib]
path = "libs/didkitlib.rs"

[[bin]]
name = "jwt"
path = "src/jwt.rs"